k8s/05-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-dashboard
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-dashboard
  template:
    metadata:
      labels:
        app: banking-dashboard
    spec:
      containers:
      - name: dashboard
        image: ahmedrabie222000/banking-dashboard:v1.0
        ports:
        - containerPort: 80
        # securityContext:
        #   runAsUser: 0
